// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`lineComment parse // #export foo 1`] = `
[
  {
    "args": undefined,
    "end": 14,
    "kind": "export",
    "name": "foo",
    "start": 0,
  },
]
`;

exports[`parse #export foo 1`] = `
[
  {
    "args": undefined,
    "end": 11,
    "kind": "export",
    "name": "foo",
    "start": 0,
  },
]
`;

exports[`parse #export foo(bar) 1`] = `
[
  {
    "args": [
      [
        "bar",
      ],
    ],
    "end": 16,
    "kind": "export",
    "name": "foo",
    "start": 0,
  },
]
`;

exports[`parse #export foo(bar, baz, boo) 1`] = `
[
  {
    "args": [
      [
        "bar",
        "baz",
        "boo",
      ],
    ],
    "end": 26,
    "kind": "export",
    "name": "foo",
    "start": 0,
  },
]
`;

exports[`parse #import foo 1`] = `
[
  {
    "args": undefined,
    "as": undefined,
    "end": 11,
    "from": undefined,
    "kind": "import",
    "name": "foo",
    "start": 0,
  },
]
`;

exports[`parse #import foo(a,b) from bar as baz 1`] = `
[
  {
    "args": undefined,
    "as": "baz",
    "end": 27,
    "from": "bar",
    "kind": "import",
    "name": "foo",
    "start": 0,
  },
]
`;

exports[`parse empty string 1`] = `[]`;
